--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@crownframework/svelte-error-boundary": "^1.0.3",
     "hexo-front-matter": "^4.2.1",
+    "markmap-common": "^0.15.3",
     "markmap-lib": "^0.15.4",
     "markmap-view": "^0.15.4",
     "svelte": "^3.49.0"
